force-app/main/default/objects/offer__c/offer__c.object-meta.xml
<CustomObject>
    <label>offer</label>
    <nameField>
        <displayFormat>off-{0000}</displayFormat>
        <label>offer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>