force-app/main/default/objects/offer__c/fields/actual_salary__c.field-meta.xml
<CustomField>
    <fullName>actual_salary__c</fullName>
    <label>actual salary</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>