force-app/main/default/objects/offer__c/fields/additional_instructions__c.field-meta.xml
<CustomField>
    <fullName>additional_instructions__c</fullName>
    <label>additional instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>