force-app/main/default/objects/offer__c/fields/bonus_percentage__c.field-meta.xml
<CustomField>
    <fullName>bonus_percentage__c</fullName>
    <label>bonus percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>