force-app/main/default/objects/offer__c/fields/candidate_name__c.field-meta.xml
<CustomField>
    <fullName>candidate_name__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>candidate name</label>
    <type>Text</type>
</CustomField>