force-app/main/default/objects/offer__c/fields/job_application__c.field-meta.xml
<CustomField>
    <fullName>job_application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>job application</label>
    <referenceTo>job_application__c</referenceTo>
    <relationshipLabel>offers</relationshipLabel>
    <relationshipName>offers</relationshipName>
    <type>Lookup</type>
</CustomField>