force-app/main/default/objects/offer__c/fields/number_of_offers__c.field-meta.xml
<CustomField>
    <fullName>number_of_offers__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>number of offers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>