force-app/main/default/objects/offer__c/fields/offer_expiration_date__c.field-meta.xml
<CustomField>
    <fullName>offer_expiration_date__c</fullName>
    <label>offer expiration date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>