force-app/main/default/objects/offer__c/fields/position_name__c.field-meta.xml
<CustomField>
    <fullName>position_name__c</fullName>
    <formula>job_application__r.position__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>position name</label>
    <type>Text</type>
</CustomField>