force-app/main/default/objects/offer__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-sent</fullName>
            </value>
            <value>
                <fullName>-received</fullName>
            </value>
            <value>
                <fullName>-accepted</fullName>
            </value>
            <value>
                <fullName>-declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>