force-app/main/default/objects/offer__c/fields/stock_options__c.field-meta.xml
<CustomField>
    <fullName>stock_options__c</fullName>
    <label>stock options</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>